<resources>
    <string name="app_name">SoccerStats</string>
    <string name="draggable_text">Draggable Text</string>
    <string name="draggable_button">Draggable Button</string>
    <string name="pitch">Soccer Pitch</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="select_your_team">Select your team</string>
    <string name="start_game">Start game</string>
    <string name="assist">ASSIST</string>
    <string name="goal">GOAL</string>
    <string name="yellow_card">YELLOW CARD</string>
    <string name="red_ncard">RED CARD</string>
    <string name="title_activity_summary_soccer_stats">Summary</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="shirt_number">Shirt Number</string>
    <string name="save_player">Save Player</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="choose_an_image">Choose an image</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
</resources>