<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_live_chrono"
        android:title=""
        app:actionLayout="@layout/chrono"
        app:showAsAction="always">

    </item>


    <!--    play icon -->
    <item
        android:id="@+id/play_action"
        android:icon="@drawable/baseline_play_arrow_white_48dp"
        android:title="@string/play"
        app:showAsAction="always" />
    <!--        android:onClick="startChronometer"-->


    <!--    pause icon -->
    <item
        android:id="@+id/pause_action"
        android:icon="@drawable/baseline_pause_white_48dp"
        android:title="@string/pause"
        app:showAsAction="always" />

    <!--    stop icon -->
    <item
        android:id="@+id/stop_action"
        android:icon="@drawable/baseline_stop_white_48dp"
        android:title="@string/stop"
        app:showAsAction="always" />

</menu>