<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/choose_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/player_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginHorizontal="150dp"
        android:maxHeight="20dp"
        android:src="@drawable/ic_launcher_background" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/picture_button"
            android:background="@android:color/holo_green_dark"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_a_picture"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            />

        <Button
            android:id="@+id/image_button"
            android:background="@android:color/holo_green_dark"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_an_image"
            android:layout_marginTop="10dp"
            android:layout_marginStart="245dp"
            />

    </RelativeLayout>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textAutoComplete"
        android:padding="6dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textAutoComplete"
        android:padding="6dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/shirt_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shirt_number"
        android:inputType="number"
        android:padding="6dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="4dp"
        android:maxLength="2"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:text="@string/save_player"
        android:textColor="@color/white"
        />

</LinearLayout>