<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?attr/actionButtonStyle"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    android:focusable="true"
    android:id="@+id/toolbar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|fill_horizontal" >

        <Chronometer
            android:id="@+id/chronometer_view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/black"
            />
        <!--    play icon -->
        <item
            android:id="@+id/play_action"
            android:icon="@drawable/ic_play_arrow_black_24dp"
            android:title="@string/play"
            app:showAsAction="always"/>
        <!--        android:onClick="startChronometer"-->


        <!--    pause icon -->
        <item
            android:id="@+id/pause_action"
            android:icon="@drawable/ic_pause_black_24dp"
            android:title="@string/pause"
            app:showAsAction="always"
            />

        <!--    stop icon -->
        <item
            android:id="@+id/stop_action"
            android:icon="@drawable/ic_stop_black_24dp"
            android:title="@string/stop"
            app:showAsAction="always"
            />



    </LinearLayout>

</androidx.appcompat.widget.Toolbar>